name:                k-means
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vined/k-means#readme
license:             BSD3
license-file:        LICENSE
author:              Edvinas Naraveckas
maintainer:          e.naraveckas@gmail.com
copyright:           2018 Edvinas Naraveckas
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable k-means
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, random
